<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="?attr/selectableItemBackground"
    android:clickable="true"
    android:focusable="true"
    android:orientation="horizontal"
    android:layout_marginBottom="5dp"
    android:padding="2dp">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/videoImg"
        android:layout_width="70dp"
        android:layout_height="50dp"
        android:contentDescription="@string/image"
        android:src="@drawable/ic_video"
        app:shapeAppearanceOverlay="@style/curved" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/videoName"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_gravity="center_vertical"
             android:maxLines="1"
            android:text="@string/video_name"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/folderName"
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:maxLines="1"
            android:text="@string/folder_name" />

    </LinearLayout>

    <TextView
        android:id="@+id/duration"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:gravity="center"
        android:text="@string/duration"
        android:textColor="@color/black"
        android:textSize="14sp" />

</LinearLayout>