<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/renameBtn"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="?attr/selectableItemBackground"
        android:text="@string/rename"
        android:textAllCaps="false"
        android:textColor="@color/black"
        app:icon="@drawable/ic_edit"
        app:iconGravity="top"
        app:iconTint="@color/cool_pink" />

    <com.google.android.material.button.MaterialButton
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="?attr/selectableItemBackground"
        android:text="@string/delete"
        android:textAllCaps="false"
        android:textColor="@color/black"
        app:icon="@drawable/ic_delete"
        app:iconGravity="top"
        app:iconTint="@color/cool_pink" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/shareBtn"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="0.9"
        android:background="?attr/selectableItemBackground"
        android:text="@string/share"
        android:textAllCaps="false"
        android:textColor="@color/black"
        app:icon="@drawable/ic_share"
        app:iconGravity="top"
        app:iconTint="@color/cool_pink" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/infoBtn"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="0.8"
        android:background="?attr/selectableItemBackground"
        android:text="@string/info"
        android:textAllCaps="false"
        android:textColor="@color/black"
        app:icon="@drawable/ic_info"
        app:iconGravity="top"
        app:iconTint="@color/cool_pink" />

</androidx.appcompat.widget.LinearLayoutCompat>