<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/audioTrack"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:text="@string/audio_track"
            android:textAllCaps="false"
            android:textColor="@color/white"
            app:icon="@drawable/ic_audiotrack"
            app:iconGravity="top"
            app:iconTint="@color/white" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/subtitlesBtn"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:text="@string/subtitles"
            android:textAllCaps="false"
            android:textColor="@color/white"
            app:icon="@drawable/ic_subtitles"
            app:iconGravity="top"
            app:iconTint="@color/white" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/audioBooster"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:text="@string/booster"
            android:textAllCaps="false"
            android:textColor="@color/white"
            app:icon="@drawable/ic_booster"
            app:iconGravity="top"
            app:iconTint="@color/white" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/speedBtn"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:text="@string/speed"
            android:textAllCaps="false"
            android:textColor="@color/white"
            app:icon="@drawable/ic_speed"
            app:iconGravity="top"
            app:iconTint="@color/white" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/sleepTimer"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:text="@string/sleep_timer"
            android:textAllCaps="false"
            android:textColor="@color/white"
            app:icon="@drawable/ic_timer"
            app:iconGravity="top"
            app:iconTint="@color/white" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/pipModeBtn"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:text="@string/pip_mode"
            android:textAllCaps="false"
            android:textColor="@color/white"
            app:icon="@drawable/ic_pip"
            app:iconGravity="top"
            app:iconTint="@color/white" />

    </LinearLayout>

</androidx.appcompat.widget.LinearLayoutCompat>