<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".View.Activitys.PlayerActivity">

    <com.google.android.exoplayer2.ui.PlayerView
        android:id="@+id/playerView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:keepScreenOn="true"
        app:controller_layout_id="@layout/custom_control_view" />

    <LinearLayout
        android:id="@+id/topController"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#42000000"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/backBtn"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:backgroundTint="@android:color/transparent"
            android:contentDescription="@string/back_btn"
            android:src="@drawable/ic_back"
            app:tint="@color/white" />

        <TextView
            android:id="@+id/videoTitle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:ellipsize="marquee"
            android:gravity="center"
            android:marqueeRepeatLimit="marquee_forever"
            android:singleLine="true"
            android:text="@string/video_name"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/moreFeaturesBtn"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginEnd="50dp"
            android:backgroundTint="@android:color/transparent"
            android:contentDescription="@string/menu"
            android:padding="13dp"
            android:src="@drawable/ic_menu"
            app:tint="@color/white" />

    </LinearLayout>

    <ImageButton
        android:id="@+id/lockBtn"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:backgroundTint="@android:color/transparent"
        android:contentDescription="@string/lock"
        android:src="@drawable/ic_lock_open"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/white" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <FrameLayout
            android:id="@+id/rewindFL"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <ImageButton
                android:id="@+id/rewindBtn"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:background="@android:color/transparent"
                android:clickable="false"
                android:src="@drawable/ic_fast_rewind"
                android:visibility="gone"
                app:tint="@color/white" />

        </FrameLayout>

        <ImageButton
            android:id="@+id/playPauseBtn"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:background="?android:selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:src="@drawable/ic_play"
            app:tint="@color/white" />

        <FrameLayout
            android:id="@+id/forwardFL"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <ImageButton
                android:id="@+id/forwardBtn"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:background="@android:color/transparent"
                android:clickable="false"
                android:src="@drawable/ic_fast_forward"
                android:visibility="gone"
                app:tint="@color/white" />

        </FrameLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/bottomController"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#42000000"
        android:gravity="end|bottom"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageButton
            android:id="@+id/repeatBtn"
            android:layout_width="18dp"
            android:layout_height="18dp"
            android:layout_gravity="center"
            android:backgroundTint="@android:color/transparent"
            android:src="@drawable/exo_controls_repeat_off"
            app:tint="@color/white"
            tools:ignore="PrivateResource" />

        <ImageView
            android:id="@+id/prevBtn"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:backgroundTint="@android:color/transparent"
            android:contentDescription="@string/menu"
            android:padding="13dp"
            android:src="@drawable/ic_previous"
            app:tint="@color/white" />

        <ImageView
            android:id="@+id/nextBtn"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:backgroundTint="@android:color/transparent"
            android:contentDescription="@string/menu"
            android:padding="13dp"
            android:src="@drawable/ic_next"
            app:tint="@color/white" />

        <ImageView
            android:id="@+id/fullScreenBtn"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginEnd="10dp"
            android:backgroundTint="@android:color/transparent"
            android:contentDescription="@string/menu"
            android:padding="13dp"
            android:src="@drawable/ic_fullscreen"
            app:tint="@color/white" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>